[package]
name = "jb"
description = "A simple command line interface for JetBrains tools"
authors = ["Brewen Couaran <contact@brewen.dev>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.75.0"
readme = "README.md"
homepage = "https://github.com/brewcoua/jb"
repository = "https://github.com/brewcoua/jb"
license = "MIT OR Apache-2.0"
version = "1.2.4"

[lib]
name = "jb"
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
clap = "4.4"
anyhow = "1.0"
atty = "0.2"
futures-util = "0.3"
humansize = "2.1"
readonly = "0.2"
serde_json = "1.0"
tempfile = "3.9"
tracing = "0.1"
colored = "2.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking","json","stream","rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.nix]
version = "0.27"
features = ["user"]

[dependencies.tokio]
version = "1.35"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]
