[package]
name = "jb"
description = "A simple command line interface for JetBrains tools"
authors = ["Brewen Couaran <contact@brewen.dev>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.75.0"
readme = "README.md"
homepage = "https://github.com/brewcoua/jb"
repository = "https://github.com/brewcoua/jb"
license = "MIT OR Apache-2.0"
version = "1.3.1"

[lib]
name = "jb"
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
clap = "4.4" # CLI parsing and argument validation
anyhow = "1.0" # Error handling
futures-util = "0.3" # Async utilities (for async stream download)
humansize = "2.1" # Human-readable file size (for download size)
readonly = "0.2" # Avoid making getters for each field in a struct
serde_json = "1.0" # JSON parsing (for API response)
tempfile = "3.9" # Temporary file creation (for installation)
tracing = "0.1" # Logging
colored = "2.1" # Colored output (in list)
inquire = "0.6" # Interactive prompt (for selecting tools)

[dependencies.reqwest] # HTTP client
version = "0.11"
default-features = false
features = ["blocking","json","stream","rustls-tls"]

[dependencies.serde] # De/serialization
version = "1.0"
features = ["derive"]

[dependencies.nix] # Unix utilities (used for detecting root)
version = "0.27"
features = ["user"]

[dependencies.tokio] # Async runtime
version = "1.35"
features = ["full"]

[dependencies.tracing-subscriber] # Logging
version = "0.3"
features = ["env-filter", "fmt"]
