[package]
name = "jb"
description = "A simple command line interface for JetBrains tools"
authors = ["Brewen Couaran <contact@brewen.dev>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.75.0"
readme = "README.md"
homepage = "https://github.com/brewcoua/jb"
repository = "https://github.com/brewcoua/jb"
license = "MIT OR Apache-2.0"
version = "1.5.8"

[lib]
name = "jb"
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
clap = "4.4" # CLI parsing and argument validation
anyhow = "1.0" # Error handling
futures-util = "0.3" # Async utilities (for async stream download)
humansize = "2.1" # Human-readable file size (for download size)
readonly = "0.2" # Avoid making getters for each field in a struct
serde_json = "1.0" # JSON parsing (for API response)
tempfile = "3.9" # Temporary file creation (for installation)
futures-lite = "2.2" # Async utilities (for async stream download)
tar = "0.4" # Tarball extraction (for installation)
flate2 = "1.0" # Gzip decompression (for installation)
flume = "0.11" # Thread-safe channel (for async stream download)
dashmap = "5.5" # Concurrent map (for thread-safe shared loggers)
once_cell = "1.19" # Lazy initialization (for thread-safe shared loggers)
sha2 = "0.10" # SHA-256 hashing (for checksum verification)
notify-rust = "4.10" # Notifications (--notify flag)

# Terminal UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
termimad = "0.29"

[dependencies.reqwest] # HTTP client
version = "0.12"
default-features = false
features = ["blocking","json","stream","rustls-tls"]

[dependencies.serde] # De/serialization
version = "1.0"
features = ["derive"]

[dependencies.nix] # Unix utilities (used for detecting root)
version = "0.28"
features = ["user"]

[dependencies.tokio] # Async runtime
version = "1.35"
features = ["full"]
