[package]
name = "jb-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.4"
colored = "2.1"
futures-util = "0.3"
humantime = "2.1.0"
indicatif = "0.17"
log = "0.4"
once_cell = "1.19.0"
readonly = "0.2"
serde_json = "1.0"
termion = "3.0.0"
tokio = "1.35"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.reqwest]
version = "0.11"
features = ["blocking","json","stream"]

[dependencies.serde]
version = "1.0"
features = ["derive"]