[package]
name = "jb-lib"
description = "Library for the jb CLI tool"
authors = ["Brewen Couaran <contact@brewen.dev>"]
edition = "2021"
rust-version = "1.75.0"
readme = "../README.md"
homepage = "https://github.com/brewcoua/jb"
repository = "https://github.com/brewcoua/jb"
license = "MIT OR Apache-2.0"
version = "1.0.0"

[dependencies]
anyhow = "1.0"
clap = "4.4"
colored = "2.1"
futures-util = "0.3"
humantime = "2.1"
indicatif = "0.17"
log = "0.4"
once_cell = "1.19"
readonly = "0.2"
serde_json = "1.0"
termion = "3.0.0"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking","json","stream","rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]