[package]
name = "jb"
version = "0.1.0"
edition = "2021"

[dependencies]
jb-lib = { path = "../jb-lib" }
clap = "4.4"
colored = "2.1"
log = "0.4"
anyhow = "1.0"
tracing = "0.1"

[dependencies.tokio]
version = "1.35"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]
