[package]
name = "jb"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brewcoua/jb"
readme = "../README.md"

[dependencies]
jb-lib = { path = "../jb-lib" }
clap = "4.4"
colored = "2.1"
anyhow = "1.0"
tracing = "0.1"

[dependencies.tokio]
version = "1.35"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]
