[package]
name = "jb"
description = "A simple CLI to manage JetBrains tools"
authors = ["Brewen Couaran <contact@brewen.dev>"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.75.0"
readme = "../README.md"
homepage = "https://github.com/brewcoua/jb"
repository = "https://github.com/brewcoua/jb"
license = "MIT OR Apache-2.0"
version = "1.2.3"

[[bin]]
name = "jb"

[dependencies]
jb-lib = { path = "../jb-lib" }
clap = "4.4"
colored = "2.1"
anyhow = "1.0"
tracing = "0.1"

[dependencies.tokio]
version = "1.35"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]
